# impact-lab-cdmx

./: .gitignore  DATA_NOTES.md  Dockerfile  HANDOFFS.md  README.md  RED_TEAM.md  fly.toml  pyproject.toml
crosswalk/: METHODOLOGY.md  citizen_categories.md  crosswalk.csv  named_programs_2024.csv
data/: README.md
data/clean/: SCHEMAS.md  budget_by_alcaldia.parquet  budget_tree.parquet  income_sources.parquet  source_links.csv
docs/: DEV_MANU_HANDOFF.md
mcp/: .gitignore  LICENSE  README.md  brief.md  pyproject.toml
mcp/docs/: mcp-casos-de-uso.md
mcp/docs/superpowers/plans/: 2026-04-18-cdmx-data.md
mcp/examples/: claude_code_mcp.md  descarga_periodo.py  smoke_test.py
mcp/src/cdmx_data/: __init__.py  cache.py  catalog.py  ckan.py  cli.py  core.py  mcp_server.py  normalize.py
mcp/src/cdmx_data/domains/: __init__.py  aire.py  finanzas.py  geo.py  movilidad.py  presupuesto.py  seguridad.py  servicios.py
mcp/tests/: conftest.py  test_cache.py  test_ckan.py  test_domains.py  test_normalize.py
notebooks/: DESIGN_NOTES.md  budget_dashboard.py  explore.py  fugas.py  obra_map.py  patrones.py  producto_unico.py  proveedores.py  ruta_del_peso.py  tus_100_pesos.py
notebooks/lib/: common.py  loaders.py
prd/: AGENT_0_ORCHESTRATOR.md  AGENT_1_DATA.md  AGENT_2_ARCHITECT.md  AGENT_3_BUILDER.md  AUDIT.md  CHANGELOG.md  GO_NO_GO.md  PRD.md  QUESTIONS_FOR_HUMAN.md
scripts/: download_data.sh  smoke_notebooks.sh
