[project]
name = "impact-lab-cdmx"
version = "0.1.0"
description = "Single integrated CDMX transparency dashboard: budget plus georeferenced public works"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.10.0",
    "polars>=1.0.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "altair>=5.4.0",
    "pyarrow>=18.0.0",
    "nbformat>=5.10.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
]

[tool.uv]
dev-dependencies = []

[tool.marimo.runtime]
output_max_bytes = 25_000_000
